# hydrocyclone_code

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: collocate.hpp  likelihood.hpp  memory_utils.hpp  operators.hpp  simulate.hpp
cpp/src/: collocate.cpp  likelihood.cpp  operators.cpp  simluate.cpp
data/: import_data.m
notebooks/: EIT Illustration.ipynb  Hydrocyclone_Collocate_Debug.ipynb  Hydrocyclone_Results_Designs.ipynb  Hydrocyclone_Results_Static_Means.ipynb  Hydrocyclone_Results_Static_PCs.ipynb  Hydrocyclone_Results_Static_Variance.ipynb  Hydrocyclone_Results_Temporal.ipynb  Hydrocyclone_Results_Temporal_Lambdas.ipynb  Hydrocyclone_Results_Temporal_PCs.ipynb  Hydrocyclone_Results_Temporal_Variance.ipynb  Hydrocyclone_Static_EIT.ipynb  Hydrocyclone_Temporal_Recovery.ipynb  Hydrodyclone_Results_Temporal.ipynb  Result_Tracker.ipynb  Sim_Data_Gen.ipynb  Untitled.ipynb  recovered_rhos.csv  recovered_rhos_no_impedance.csv
notebooks/dummy_data/centered_blob/: obs.npy  theta.npy
notebooks/dummy_data/centered_blob_larger/: obs.npy  theta.npy
notebooks/dummy_data/tmp/: obs.npy
python/: setup.py
python/hydrocyclone/: __init__.py  collocate.pyx  grids.py  helpers.py  op_wrapper.pyx  pcn_kernel.py  simulate.pyx
python/hydrocyclone.egg-info/: PKG-INFO  SOURCES.txt
python/hydrocyclone/utils/: op_system_to_cpp.py
python/tests/: c_collocate_test.py  c_operators_test.py
